pygobject (3.4.2-2) UNRELEASED; urgency=low

  * Drop quilt (not necessary, we are using 3.0 (quilt) source format), and
    dh_autoreconf (we have no patches).

 -- Martin Pitt <mpitt@debian.org>  Tue, 27 Nov 2012 11:11:57 +0100

pygobject (3.4.2-1) experimental; urgency=low

  * New upstream release.

 -- Martin Pitt <mpitt@debian.org>  Tue, 13 Nov 2012 05:57:56 +0100

pygobject (3.4.1.1-1) experimental; urgency=low

  [ Martin Pitt ]
  * New upstream release.
  * debian/control.in: Bump g-i dependencies according to configure.ac.
  * debian/rules: Remove moving of site-packages, this was fixed upstream now.

  [ Matthias Klose ]
  * Fix renaming of python3 extensions.
  * Configure with --disable-silent-rules.
  * debian/rules (clean): Remove __pycache__ directories.

 -- Martin Pitt <mpitt@debian.org>  Mon, 22 Oct 2012 12:23:17 +0200

pygobject (3.4.1-1) experimental; urgency=low

  * New upstream bug fix release.
  * debian/rules: Update handling of site-packages directory, as this version
    now ships an .egg-info.

 -- Martin Pitt <mpitt@debian.org>  Tue, 16 Oct 2012 07:18:20 +0200

pygobject (3.4.0-1) experimental; urgency=low

  * New upstream release.

 -- Martin Pitt <mpitt@debian.org>  Mon, 24 Sep 2012 09:43:47 +0200

pygobject (3.3.92-1) experimental; urgency=low

  * New upstream release.

 -- Martin Pitt <mpitt@debian.org>  Mon, 17 Sep 2012 23:07:55 +0200

pygobject (3.3.91-1) experimental; urgency=low

  * New upstream release.
  * debian/control.in: Bump g-i build dependencies as per configure.ac.
  * debian/control.in: Bump X-Python-Version to >= 2.6. pygobject hasn't
    worked with 2.5 for quite a while.

 -- Martin Pitt <mpitt@debian.org>  Tue, 04 Sep 2012 12:47:21 +0200

pygobject (3.3.90-1) experimental; urgency=low

  * New upstream release.

 -- Martin Pitt <mpitt@debian.org>  Mon, 20 Aug 2012 23:23:43 +0200

pygobject (3.3.4-1) experimental; urgency=low

  * New upstream release.