@@ -1,0 +1,1 @@
+usr/lib/python*/*-packages/gi/*cairo*
