@@ -1,0 +1,2 @@
+usr/lib/python*
+usr/lib/*/lib*.so.*
