@@ -2,6 +2,9 @@ pygobject (3.4.2-2) UNRELEASED; urgency=low
 
   * Drop quilt (not necessary, we are using 3.0 (quilt) source format), and
     dh_autoreconf (we have no patches).
+  * Greatly simplify debian/rules, by switching to dh7 build system and
+    factorizing the per-flavor rules in a simpler and better way. Also move to
+    dh compat 9 to get multiarch compatible library directories.
 
  -- Martin Pitt <mpitt@debian.org>  Tue, 27 Nov 2012 11:11:57 +0100
 
